feat: add redis-backed merchant category caching and hybrid merchant CRUD
- add Redis cache config with graceful fallback handling
- implement admin and self-service merchant endpoints
- sync merchant category cache on create/update/delete and seed warmup
- enforce method-level user authorization and block inactive merchant login
- fix merchant repository mapping and merchant DTO/request models

Co-authored-by: Copilot <copilot@github.com>