@@ -1,21 +1,24 @@
 package com.example.demo.services.impl;
 
-import java.util.List;
-import java.util.UUID;
-import java.util.stream.Collectors;
-
-import org.springframework.stereotype.Service;
-import lombok.extern.slf4j.Slf4j;
-
+import com.example.demo.config.CacheNames;
 import com.example.demo.dtos.requests.ReqMerchantCategoryDto;
 import com.example.demo.dtos.responses.ResMerchantCategoryDto;
-import com.example.demo.repositories.MerchantCategoryRepository;
-import com.example.demo.services.MerchantCategoryService;
 import com.example.demo.entities.MerchantCategoryEntity;
 import com.example.demo.exceptions.DataNotFoundException;
+import com.example.demo.repositories.MerchantCategoryRepository;
+import com.example.demo.services.MerchantCategoryService;
+import org.springframework.cache.annotation.CacheEvict;
+import org.springframework.cache.annotation.CachePut;
+import org.springframework.cache.annotation.Cacheable;
+import org.springframework.cache.annotation.Caching;
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
-@Slf4j
+import java.util.List;
+import java.util.UUID;
+
 @Service
+@Transactional(readOnly = true)
 public class MerchantCategoryServiceImpl implements MerchantCategoryService {
     private final MerchantCategoryRepository merchantCategoryRepository;
 
@@ -24,26 +27,34 @@ public class MerchantCategoryServiceImpl implements MerchantCategoryService {
     }
 
     @Override
+    @Transactional
+    @Caching(
+            put = @CachePut(cacheNames = CacheNames.MERCHANT_CATEGORY_BY_ID, key = "#result.id"),
+            evict = @CacheEvict(cacheNames = CacheNames.MERCHANT_CATEGORY_LIST, key = "'all'")
+    )
     public ResMerchantCategoryDto createMerchantCategory(ReqMerchantCategoryDto req) {
         MerchantCategoryEntity merchantCategory = new MerchantCategoryEntity();
         merchantCategory.setName(req.getName());
         MerchantCategoryEntity savedMerchantCategory = merchantCategoryRepository.save(merchantCategory);
-        return new ResMerchantCategoryDto(savedMerchantCategory.getId(), savedMerchantCategory.getName());
-        // TODO: SAVE IT TO REDIS FOR CACHING PURPOSE
+        return toResponse(savedMerchantCategory);
     }
 
     @Override
+    @Cacheable(cacheNames = CacheNames.MERCHANT_CATEGORY_BY_ID, key = "#id")
     public ResMerchantCategoryDto getMerchantCategoryById(UUID id) {
-        // TODO: CHECK IF THE DATA IS AVAILABLE IN REDIS CACHE, IF NOT THEN GET IT FROM DATABASE AND SAVE IT TO REDIS
         MerchantCategoryEntity merchantCategory = merchantCategoryRepository.findById(id).orElseThrow(
                 () -> new DataNotFoundException("Merchant Category with ID: " + id + " not found")
         );
-        return new ResMerchantCategoryDto(merchantCategory.getId(), merchantCategory.getName());
+        return toResponse(merchantCategory);
     }
 
     @Override
+    @Transactional
+    @Caching(evict = {
+            @CacheEvict(cacheNames = CacheNames.MERCHANT_CATEGORY_BY_ID, key = "#id"),
+            @CacheEvict(cacheNames = CacheNames.MERCHANT_CATEGORY_LIST, key = "'all'")
+    })
     public void deleteMerchantCategory(UUID id) {
-        // TODO: REMOVE THE DATA FROM REDIS CACHE
         if (!merchantCategoryRepository.existsById(id)) {
             throw new DataNotFoundException("Merchant Category with ID: " + id + " not found");
         }
@@ -51,25 +62,30 @@ public class MerchantCategoryServiceImpl implements MerchantCategoryService {
     }
 
     @Override
+    @Transactional
+    @Caching(
+            put = @CachePut(cacheNames = CacheNames.MERCHANT_CATEGORY_BY_ID, key = "#id"),
+            evict = @CacheEvict(cacheNames = CacheNames.MERCHANT_CATEGORY_LIST, key = "'all'")
+    )
     public ResMerchantCategoryDto updateMerchantCategoryName(UUID id, ReqMerchantCategoryDto req) {
         MerchantCategoryEntity merchantCategory = merchantCategoryRepository.findById(id).orElseThrow(
                 () -> new DataNotFoundException("Merchant Category with ID: " + id + " not found")
         );
         merchantCategory.setName(req.getName());
         MerchantCategoryEntity updatedMerchantCategory = merchantCategoryRepository.save(merchantCategory);
-        // TODO: UPDATE THE DATA IN REDIS CACHE
-        return new ResMerchantCategoryDto(updatedMerchantCategory.getId(), updatedMerchantCategory.getName());
+        return toResponse(updatedMerchantCategory);
     }
 
     @Override
+    @Cacheable(cacheNames = CacheNames.MERCHANT_CATEGORY_LIST, key = "'all'")
     public List<ResMerchantCategoryDto> getAllMerchantCategories() {
-        // TODO: CHECK IF THE DATA IS AVAILABLE IN REDIS CACHE, IF NOT THEN GET IT FROM DATABASE AND SAVE IT TO REDIS
         return merchantCategoryRepository.findAll()
-            .stream()
-            .map(merchantCategory -> new ResMerchantCategoryDto(
-                merchantCategory.getId(),
-                merchantCategory.getName()
-            ))
-            .collect(Collectors.toList());
+                .stream()
+                .map(this::toResponse)
+                .toList();
+    }
+
+    private ResMerchantCategoryDto toResponse(MerchantCategoryEntity merchantCategory) {
+        return new ResMerchantCategoryDto(merchantCategory.getId(), merchantCategory.getName());
     }
 }
